# dumbpm

./: .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
dumbpm/: cmd.py  parse.py  prio.py
dumbpm/est/: __init__.py  est.py  parse.py
dumbpm/guess/: __init__.py  guess.py  parse.py
dumbpm/prio/: __init__.py  parse.py  prio.py
dumbpm/shared/: __init__.py  shared.py
tests/: cmd_test.py  example_test.py  negative.csv  parse_test.py  prio.csv  prio_asym_alt.csv  prio_no_duration.csv  prio_no_rig.csv  prio_no_risk.csv  prio_test.py  prio_wrong_alt.csv
tests/csvs/: asym_alt.csv  missing_one_alt.csv  missing_one_cost.csv  missing_one_proj.csv  missing_one_rig.csv  no_dur.csv  no_proj.csv  prio.csv  wrong_alt.csv
tests/est/: est_test.py  parse_test.py
tests/est/csvs/: missing_one_change.csv  missing_one_velocity.csv  negative_velocity.csv  no_velocity.csv  sprints.csv  sprints_no_change.csv
tests/guess/: guess_test.py  parse_test.py
tests/guess/csvs/: duplicate_task.csv  milestones.csv  missing_one_best.csv  missing_one_expected.csv  missing_one_task.csv  missing_one_worst.csv  negative.csv  no_best.csv  no_expected.csv  no_task.csv  no_worst.csv  non_monotonic.csv  tasks.csv
tests/prio/: parse_test.py  prio_test.py
tests/prio/csvs/: asym_alt.csv  duplicate_proj.csv  missing_one_alt.csv  missing_one_dur.csv  missing_one_pick.csv  missing_one_risk.csv  missing_one_value.csv  negative.csv  no_alt.csv  no_cost.csv  no_pick.csv  no_risk.csv  no_value.csv  (+3 more)
